# BlendFarm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1725647023912-fccda3910c367.mjs
.github/workflows/: rust.yml
assets/: NetworkInfra_Blender.drawio
backend/: Cargo.toml  tauri.conf.json  test.blend
backend/capabilities/: default.json  desktop.json
backend/src/: blender_process.rs  cli.rs  lib.rs  main.rs  server.rs
backend/src/blender/: install.rs  version.rs
backend/src/capabilities/: main.json
backend/src/controllers/: connection.rs  live_view.rs  mod.rs  project.rs  remote_render.rs  settings.rs
backend/src/examples/: Blender2.46.html  Blender3.0.html  blender.html
backend/src/models/: blender.rs  blender_version.rs  client.rs  client_node.rs  common.rs  data.rs  error.rs  file_info.rs  file_transfer.rs  job.rs  message.rs  mod.rs  network.rs  node.rs  project_file.rs  render_info.rs  render_node.rs  render_queue.rs  render_setting.rs  server.rs  server_node.rs  server_setting.rs
backend/src/services/: blender.rs  blender_manager.rs  blender_process.rs  blender_version.rs  format.rs  mod.rs  multicast.rs  receiver.rs  sender.rs
blender/: Cargo.toml  README.md
blender/examples/assets/: test.blend
blender/examples/download/: README.md  main.rs
blender/examples/peek/: main.rs
blender/examples/render/: README.md  main.rs
blender/examples/test/: main.rs
blender/src/: args.rs  blender.rs  blender_download_link.rs  device.rs  engine.rs  format.rs  lib.rs  manager.rs  mode.rs  models.rs  page_cache.rs  peek.py  render.py  test.rs
blender/src/models/: args.rs  blender_data.rs  blender_peek_response.rs  blender_render_setting.rs  category.rs  device.rs  download_link.rs  engine.rs  format.rs  home.rs  mode.rs  status.rs
plugins/fs/permissions/: home.toml
src/: App.css  App.tsx  Progress.tsx  Section.tsx  connection.html  htmx.js  index.html  main.js  main.tsx  project.html  setting.html  styles.css  tauri-ext.js  todo.txt
src-tauri/: Cargo.toml  build.rs  doc.html  log.txt  tauri.conf.json
src-tauri/.sqlx/: query-492bba94c12e87f1fe424a622aeb72f4059fe3e474f40130c7af435ffa2404db.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 20250111160252_create_job_table.up.sql  20250111160259_create_task_table.up.sql  20250111160306_create_worker_table.down.sql  20250111160306_create_worker_table.up.sql  20250111160855_create_renders_table.down.sql  20250111160855_create_renders_table.up.sql
src-tauri/src/: BlendFarmFileSession.rs  BlendFarmManager.rs  blender.rs  blender_process.rs  blender_version.rs  cache.rs  config.rs  context.rs  lib.rs  main.rs  packet.rs  project.rs  render_client.rs  render_node.rs  server_settings.rs
src-tauri/src/capabilities/: main.json
src-tauri/src/cmd/: connection.rs  mod.rs  project.rs  render_settings.rs  section.rs
src-tauri/src/commands/: client_node.rs
src-tauri/src/controllers/: connection.rs  mod.rs  project.rs  remote_render.rs
src-tauri/src/domain/: job_manager.rs
src-tauri/src/domains/: activity_store.rs  job_store.rs  mod.rs  render_store.rs  task_store.rs  worker_store.rs
src-tauri/src/models/: app_state.rs  behaviour.rs  blender.rs  client.rs  client_node.rs  computer_spec.rs  context.rs  data.rs  event.rs  ffmpeg.rs  job.rs  message.rs  mod.rs  network.rs  packet.rs  project_file.rs  receive_msg.rs  render_info.rs  render_node.rs  render_node_collection.rs  render_queue.rs  render_settings.rs  render_task.rs  sender_msg.rs  server.rs  server_setting.rs  task.rs  with_id.rs  worker.rs
src-tauri/src/page/: connection.rs  project.rs
src-tauri/src/routes/: job.rs  mod.rs  remote_render.rs  server_settings.rs  settings.rs  util.rs  worker.rs
src-tauri/src/services/: blend_farm.rs  cli_app.rs  client.rs  database.rs  display_app.rs  job_manager.rs  message.rs  mod.rs  network_service.rs  receiver.rs  sender.rs  server.rs  tauri_app.rs
src-tauri/src/services/data_store/: mod.rs  sqlite_job_store.rs  sqlite_renders_store.rs  sqlite_task_store.rs  sqlite_worker_store.rs  surrealdb_job_store.rs  surrealdb_task_store.rs  surrealdb_worker_store.rs
src/components/: Checkbox.tsx  Sidebar.tsx  blender_entry.tsx  job_dialog.tsx  node_window.tsx  project_file.tsx  project_window.tsx  render_job.tsx  render_node.tsx  side_bar.tsx
src/pages/: connection.tsx  connection_container.tsx  live_view.tsx  project.tsx  project_file.tsx  remote_render.html  remote_render.tsx  setting.tsx  workers.tsx
src/props/: blender_props.tsx
