[package]
name = "blendfarm"
version = "0.1.0"
description = "A open-source, cross-platform, stand-alone Network Render farm for Blender"
authors = ["Jordan Bejar"]
license = "MIT"
repository = "https://github.com/jordanbejar/BlendFarm"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# I'm getting warning message that this manifest is unused?
[dependencies]
blender = { path = "../blender", features = ["manager"] }
tauri = { version = "1.5.11", features = ["api-all", "cli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
message-io = { version = "0.18", default-features = false, features = [
    "tcp",
    "udp",
] }
bincode = "1.3.3"
thiserror = "1.0.58"
semver = "1.0.22"
dirs = "5.0.1"
anyhow = "1.0.86"
uuid = { version = "*", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
local-ip-address = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# TODO: I would like to know why this dependendies.uuid is any different than just using uuid = "1.9.1"?
[dependendies.uuid]
version = "1.9.1"
features = ["v4", "fast-rng", "macro-diagnostics, serde"]

[dependendies.pnet]
version = "0.34"
