[package]
name = "blendfarm"
version = "0.1.0"
description = "A open-source, cross-platform, stand-alone Network Render farm for Blender"
authors = ["Jordan Bejar"]
license = "MIT"
repository = "https://github.com/tiberiumboy/BlendFarm"
edition = "2021"
resolver = "2"

[lib]
name = "blenderfarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies]
blender = { path = "../blender" } # , features = ["manager"]
tauri = { version = "2.0.0-rc.3", features = [] }
tauri-plugin-shell = "2.0.0-rc.3" # { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
message-io = { version = "0.18", default-features = false, features = [
    "tcp",
    "udp",
] }
bincode = "1.3.3"
thiserror = "1"
semver = "1.0.22"
dirs = "5.0.1"
anyhow = "1"
uuid = { version = "*", features = ["serde"] }
local-ip-address = "0.6.1"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependendies.uuid]
version = "1.9.1"
features = ["v4", "fast-rng", "macro-diagnostics, serde"]

[dependendies.pnet]
version = "0.34"
