[package]
name = "blendfarm"
version.workspace = true
authors.workspace = true
description = "A open-source, cross-platform, stand-alone Network Render farm for Blender"
license = "MIT"
repository = "https://github.com/tiberiumboy/BlendFarm"
edition = "2021"
resolver = "2"

[lib]
name = "blenderfarm_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
[dependencies.tauri-plugin-dialog]
version = "2"

[dependencies.tauri-plugin-fs]
version = "2"

[dependencies.tauri-plugin-os]
version = "2"

[dependencies.tauri-plugin-persisted-scope]
version = "2"

[dependencies.tauri-plugin-shell]
version = "2"

[dependencies.tauri-build]
version = "^2.0.0"

[dependencies.message-io]
version = "^0.18"
default-features = false
features = ["tcp", "udp"]


[dependencies.bincode]
version = "1.3.3"

[dependencies.thiserror]
version = "^1"

[dependencies.dirs]
version = "5.0.1"

[dependencies.anyhow]
version = "^1.0.89"

[dependencies.local-ip-address]
version = "^0.6.3"

[dependencies.tauri-plugin-cli]
version = "^2.0.0"

[dependencies.tauri-plugin-core]
version = "2.0.0-beta.0"

[dependencies.blender]
path = "../blender"

[dependencies.semver]
version = "^1.0.22"

[dependencies.pnet]
version = "0.34"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[dependencies.tauri]
version = "^2.0.0"
features = ["protocol-asset"]

[dependencies.serde]
version = "^1.0.210"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.128"

[dependencies.uuid]
version = "^1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
