[package]
name = "blender"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
regex = "1.10.4"
semver = { version = "^1.0", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5.0", features = ["serde"] }
thiserror = "^1"
uuid = { version = "^1", features = ["serde", "v4"] }
ureq = { version = "^2" }

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
dmg = { version = "0.1.2" }

[target.'cfg(target_os = "linux")'.dependencies]
xz = { version = "0.1.0" }
tar = { version = "0.4.40" }


# [features]
# manager = ["ureq", "xz", "tar", "dmg"]
