[package]
name = "blender"
version = "0.1.0"
edition = "2021"

# trying something out, make this library once I can understand how I can reference this externally from tauri side of application
# [lib]
# crate-type = ["cdylib"]

[dependencies]
dirs = "5.0.1"
regex = "^1.11.1"
semver = { version = "^1.0.24", features = ["serde"] }
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0.133"
url = { version = "^2.5.4", features = ["serde"] }
thiserror = "^2"
uuid = { version = "^1", features = ["serde", "v4"] }
ureq = { version = "^2.12" }
blend = "0.8.0"
tokio = { version = "1.42.0", features = ["full"] }
xml-rpc = "^0.0"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "^2.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
dmg = { version = "^0.1" }

[target.'cfg(target_os = "linux")'.dependencies]
xz = { version = "^0.1" }
tar = { version = "^0.4.43" }


# [features]
# manager = ["ureq", "xz", "tar", "dmg"]
