[package]
name = "blendfarm"
"authors" = ["Jordan Bejar"]
description = "A open-source, cross-platform, stand-alone Network Render farm for Blender"
license = "MIT"
repository = "https://github.com/tiberiumboy/BlendFarm"
edition = "2021"
version = "0.1.0"

[lib]
name = "blenderfarm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = 1
incremental = true
lto = "thin"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
incremental = true
debug = 0

[profile.dev.package.sqlx-macros]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "^2.0", features = [] }

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
async-std = "^1.13"
blend = "^0.8"
blender = { path = "./../blender/" }
libp2p = { version = "^0.55", features = [
    "mdns",
    "macros",
    "gossipsub",
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "tls",
    "quic",
    "kad",
] }
libp2p-request-response = { version = "^0.28", features = ["cbor"] }
bincode = "1.3"
dirs = "^6.0"
semver = "^1.0"
# Use to extract system information
machine-info = "^1.0.9"
thiserror = "^2.0.11"
tauri-plugin-dialog = "^2.2"
tauri-plugin-fs = "^2.2"
tauri-plugin-os = "^2.2"
tauri-plugin-persisted-scope = "^2.2"
tauri-plugin-shell = "^2.2"
tokio = { version = "^1.43", features = ["full"] }
clap = { version = "^4.5", features = ["derive"] }
futures = "0.3.31"
sqlx = { version = "^0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "uuid",
] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
dotenvy = "^0.15"
# TODO: Compile restriction: Test and deploy using stable version of Rust! Recommends development on Nightly releases
maud = "^0.27"

# this came autogenerated. I don't think I will develop this in the future, but would consider this as an april fools joke. Yes I totally would.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "^2.2.0"
tauri = { version = "^2.2.5", features = ["protocol-asset"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^1.*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

# [build]
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]
